--- a/template.html
+++ b/template.html
@@ -5,16 +5,48 @@
 <!--<link rel="stylesheet" href="style.css">-->
 
 <style type="text/css">
+
 img {
   width:100px;
   height:100px;
+}
+body {
+  font-family: Calibri; 
+  text-align: center;
+  background: #0FE9A0;
 }
 h1 {
   color: red;
 }
 h2 {
   font-family: Arial;
-  color: green;
+  color: red;
+}
+
+#links {
+  text-align: center; 
+  padding-left: 100px;
+  width: 1200px;
+}
+
+#at {
+  float:left;
+  width: 300px;
+}
+
+#mc {
+  float:left;
+  width: 300px;
+}
+
+#proto {
+  float:left;
+  width: 300px;
+}
+
+#au {
+  float:left;
+  width: 300px;
 }
 
 </style>
@@ -27,7 +59,6 @@ h2 {
           document.getElementById(id).style.display = "none";  
         }
         else document.getElementById(id).style.display = "block";
-
   }
   </script>
   <script>
@@ -47,23 +78,16 @@ h2 {
         var image = document.getElementById("ricardo"); 
                 image.src = "ist182010.jpg";  
         } 
-
 </script>
 
 
 </head>
 
 
-<body style="font-family:calibri; text-align: center;" >
+<body>
 
 <h1 > <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/IIPM51113/2015-2016/2-semestre"><u>Interfaces Pessoa M&aacute;quina 2015-16</u> </a></h1>
 <h2>Grupo 06 - Turno IIPM51113L02</h2>
-
-<script>
-
-</script>
-
-
 
 <table align=center>
   <tr>
@@ -83,11 +107,11 @@ h2 {
   </tr>
 </table>
 
-<div id="links" style="text-align: left; padding-left: 100px;">
+<div id="links">
 <p>
 
 <div id="at" class="section">
-<h2 class="section" onclick="toggleVisible('at_inner')">Análise de Tarefas</h2>
+<h2 class="section" onclick="toggleVisible('at_inner')">An&aacute;lise de Tarefas</h2>
 <div id="at_inner" class="inner_section">
 <a href="questionario1.html">Question&aacute;rio para an&aacute;lise de tarefas</a> <br />
 <a href="questionario2.html">Question&aacute;rio para an&aacute;lise de tarefas (melhorado)</a> <br />
@@ -105,7 +129,7 @@ h2 {
 </div>
 
 <div id="proto" class="section">
-<h2 class="section" onclick="toggleVisible('proto_inner')">Protótipos</h2>
+<h2 class="section" onclick="toggleVisible('proto_inner')">Prot&oacute;tipos</h2>
 <div id="proto_inner" class="inner_section">
 <a href="pbf1.html">PBF</a> <br />
 <a href="pbf2.html">PBF (melhorado)</a> <br />
@@ -113,13 +137,13 @@ h2 {
 <a href="protFuncional1-completo.html">Primeiro prot&oacute;tipo funcional completo</a> <br />
 <a href="protFuncional2-beta.html">Segundo prot&oacute;tipo funcional</a> <br />
 <a href="protFuncional2-completo.html">Segundo prot&oacute;tipo funcional completo</a><br />
-<a href="protFinal-beta.html">Prot&oacute;tipo Final</a> <br />
+<a href="protFinal-beta.html">Prot&oacute;;tipo Final</a> <br />
 <a href="protFinal-completo.html">Prot&oacute;tipo Final completo</a><br />
 </div>
 </div>
 
 <div id="au" class="section">
-<h2 class="section" onclick="toggleVisible('au_inner')">Avaliação com Utilizadores</h2>
+<h2 class="section" onclick="toggleVisible('au_inner')">Avalia&ccedil;&atilde;o com Utilizadores</h2>
 <div id="au_inner" class="inner_section">
 <a href="tarefas-criterios1.html">Tarefas e Crit&eacute;rios de usabilidade</a> <br />
 <a href="tarefas-criterios2.html">Tarefas e Crit&eacute;rios de usabilidade (melhorado)</a> <br />
