--- a/template.html
+++ b/template.html
@@ -1,91 +1,113 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>IPM</title>
-<!--<link rel="stylesheet" href="style.css">-->
+  <title>IPM</title>
+  <link rel="shortcut icon" href="ist.png" type="image/x-png"/> <!--insere um icon no topo do separador-->
 
-<style type="text/css">
+  <style type="text/css">
 
-img {
-  width:100px;
-  height:100px;
-}
-body {
-  font-family: Calibri; 
-  text-align: center;
-  background: #0FE9A0;
-}
-h1 {
-  color: red;
-}
-h2 {
-  font-family: Arial;
-  color: red;
-}
+    img {
+      width:100px;
+      height:100px;
+    }
+    body {
+      font-family: Calibri; 
+      text-align: center;
+      background: #0FE9A0;
+    }
+    h1 {
+      color: red;
+    }
+    h2 {
+      font-family: Arial;
+      color: red;
+    }
 
-#links {
-  text-align: center; 
-  padding-left: 100px;
-  width: 1200px;
-}
+    #links {
+      text-align: center; 
+      padding-left: 100px;
+      width: 1200px;
+    }
 
-#at {
-  float:left;
-  width: 300px;
-}
+    #at {
+      float:left;
+      width: 300px;
+    }
 
-#mc {
-  float:left;
-  width: 300px;
-}
+    #mc {
+      float:left;
+      width: 300px;
+    }
 
-#proto {
-  float:left;
-  width: 300px;
-}
+    #proto {
+      float:left;
+      width: 300px;
+    }
 
-#au {
-  float:left;
-  width: 300px;
-}
+    #au {
+      float:left;
+      width: 300px;
+    }
 
-</style>
+    div a:hover {
+      font-size: 20px;
+      color: black;
+    }
+
+    #logo {
+     width: 300px; 
+    }
+  </style>
 
 
 
-<script type="text/javascript">
-  function toggleVisible(id) { 
-        if(document.getElementById(id).style.display == "block") {
-          document.getElementById(id).style.display = "none";  
-        }
-        else document.getElementById(id).style.display = "block";
-  }
+  <script type="text/javascript">
+    function toggleVisible(id) { 
+          if(document.getElementById(id).style.display == "block") {
+            document.getElementById(id).style.display = "none";  
+          }
+          else document.getElementById(id).style.display = "block";
+    }
   </script>
-  <script>
-  function changeImage1() { 
-        var image = document.getElementById("afonso"); 
-                image.src = "ist182539.jpg";  
-        } 
+  <!--<script>
+    function changeImage1() { 
+          var image = document.getElementById("afonso"); 
+                  image.src = "ist182539.jpg";  
+          } 
   </script> 
   <script>     
-  function changeImage2() { 
-        var image = document.getElementById("bruno"); 
-                image.src = "ist182053.jpg";  
-        } 
-   </script>  
-   <script> 
-  function changeImage3() { 
-        var image = document.getElementById("ricardo"); 
-                image.src = "ist182010.jpg";  
-        } 
-</script>
+    function changeImage2() { 
+          var image = document.getElementById("bruno"); 
+                  image.src = "ist182053.jpg";  
+          } 
+  </script>  
+  <script> 
+    function changeImage3() { 
+          var image = document.getElementById("ricardo"); 
+                  image.src = "ist182010.jpg";  
+          } 
+  </script>-->
+  <script>
+      function changeImage(id) { 
+        var image = document.getElementById(id);
+        if(id == "ricardo"){ 
+          image.src = "ist182010.jpg";
+          }
+        if(id == "bruno"){ 
+           image.src = "ist182053.jpg";
+          }
+        if(id == "afonso"){ 
+          image.src = "ist182539.jpg";
+          }  
+        }
+  </script>
 
 
 </head>
 
 
 <body>
-
+<img id="logo" src="tecnico.jpg">
 <h1 > <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/IIPM51113/2015-2016/2-semestre"><u>Interfaces Pessoa M&aacute;quina 2015-16</u> </a></h1>
 <h2>Grupo 06 - Turno IIPM51113L02</h2>
 
@@ -101,9 +123,9 @@ h2 {
     <td>82010</td>
   </tr>
   <tr>
-    <td><img id="afonso" onclick="changeImage1()" src = "student1.png" ></td>
-    <td><img id="bruno" onclick="changeImage2()" src = "student2.png" ></td> 
-    <td><img id="ricardo" onclick="changeImage3()" src = "student3.png" ></td>
+    <td><img id="afonso" onclick="changeImage('afonso')" src = "student1.png" ></td>
+    <td><img id="bruno" onclick="changeImage('bruno')" src = "student2.png" ></td> 
+    <td><img id="ricardo" onclick="changeImage('ricardo')" src = "student3.png" ></td>
   </tr>
 </table>
 
