--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
 
 
   <script type="text/javascript">
-    function toggleVisible(id) { 
-          if(document.getElementById(id).style.display == "block") {
-            document.getElementById(id).style.display = "none";  
+    function toggleVisible(id1, id2) { 
+          if(document.getElementById(id1).style.display == "block") {
+            document.getElementById(id1).style.display = "none";
+            document.getElementById(id2).style.color="#3984c5";
+
           }
-          else document.getElementById(id).style.display = "block";
+
+          else {
+            document.getElementById(id1).style.display = "block";
+            document.getElementById(id2).style.color="#224f77";
+          }
     }
   </script>
   
@@ -73,7 +79,7 @@
 <p>
 
 <div id="at" class="section">
-<h2 class="section" onclick="toggleVisible('at_inner')">An&aacute;lise de Tarefas</h2>
+<h2 id ="title_1" class="section" onclick="toggleVisible('at_inner', 'title_1')">An&aacute;lise de Tarefas</h2>
 <div id="at_inner" class="inner_section">
 <a href="questionario1.html">Question&aacute;rio para an&aacute;lise de tarefas</a> <br />
 <a href="questionario2.html">Question&aacute;rio para an&aacute;lise de tarefas (melhorado)</a> <br />
@@ -83,7 +89,7 @@
 </div>
 
 <div id="mc" class="section">
-<h2 class="section" onclick="toggleVisible('mc_inner')">Modelo Conceptual</h2>
+<h2 id ="title_2" class="section" onclick="toggleVisible('mc_inner', 'title_2')">Modelo Conceptual</h2>
 <div id="mc_inner" class="inner_section">
 <a href="mod-conceptual1.html">Modelo Conceptual</a> <br />
 <a href="mod-conceptual2.html">Modelo Conceptual (melhorado)</a> <br />
@@ -91,7 +97,7 @@
 </div>
 
 <div id="proto" class="section">
-<h2 class="section" onclick="toggleVisible('proto_inner')">Prot&oacute;tipos</h2>
+<h2 id ="title_3" class="section" onclick="toggleVisible('proto_inner', 'title_3')">Prot&oacute;tipos</h2>
 <div id="proto_inner" class="inner_section">
 <a href="pbf1.html">PBF</a> <br />
 <a href="pbf2.html">PBF (melhorado)</a> <br />
@@ -105,7 +111,7 @@
 </div>
 
 <div id="au" class="section">
-<h2 class="section" onclick="toggleVisible('au_inner')">Avalia&ccedil;&atilde;o com Utilizadores</h2>
+<h2 id ="title_4" class="section" onclick="toggleVisible('au_inner', 'title_4')">Avalia&ccedil;&atilde;o com Utilizadores</h2>
 <div id="au_inner" class="inner_section">
 <a href="tarefas-criterios1.html">Tarefas e Crit&eacute;rios de usabilidade</a> <br />
 <a href="tarefas-criterios2.html">Tarefas e Crit&eacute;rios de usabilidade (melhorado)</a> <br />
