change colors to IST official colors

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     function toggleVisible(id1, id2) { 
           if(document.getElementById(id1).style.display == "block") {
             document.getElementById(id1).style.display = "none";
-            document.getElementById(id2).style.color="#3984c5";
+            document.getElementById(id2).style.color="#009de0";
 
           }
 
