--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 <h2 id ="title_1" class="section" onclick="toggleVisible('at_inner', 'title_1')">An&aacute;lise de Tarefas</h2>
 <div id="at_inner" class="inner_section">
 <a href="https://docs.google.com/document/d/1hrPaSQGLcK6KLc0y5Q233tXq7S7vSSzNOp0WQv4iZjk/edit?usp=sharing">Question&aacute;rio para an&aacute;lise de tarefas</a> <br />
-<a href="https://docs.google.com/forms/d/1gH3ezO1UoCYv8fcJZ47Ojpfou4LjDJPR0JhrsIeC49s/viewform">Question&aacute;rio para an&aacute;lise de tarefas (melhorado)</a> <br />
-<a href="at1.html">An&aacute;lise de tarefas + Funcionalidades</a> <br />
+<a href="https://docs.google.com/document/d/1QY-8jMWV-SWL3CffynLuyEYbFcdm7EXfZggmbBCT51c/edit?usp=sharing">Question&aacute;rio para an&aacute;lise de tarefas (melhorado)</a> <br />
+<a href="aut.pdf">An&aacute;lise de tarefas + Funcionalidades</a> <br />
 <a href="at2.html">An&aacute;lise de tarefas + Funcionalidades (melhorados)</a> <br />
 </div>
 </div>
