--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 <div id="at" class="section">
 <h2 id ="title_1" class="section" onclick="toggleVisible('at_inner', 'title_1')">An&aacute;lise de Tarefas</h2>
 <div id="at_inner" class="inner_section">
-<a href="https://docs.google.com/document/d/1hrPaSQGLcK6KLc0y5Q233tXq7S7vSSzNOp0WQv4iZjk/edit?usp=sharing">Question&aacute;rio para an&aacute;lise de tarefas</a> <br />
-<a href="https://docs.google.com/document/d/1QY-8jMWV-SWL3CffynLuyEYbFcdm7EXfZggmbBCT51c/edit?usp=sharing">Question&aacute;rio para an&aacute;lise de tarefas (melhorado)</a> <br />
+<a href="quest.pdf">Question&aacute;rio para an&aacute;lise de tarefas</a> <br />
+<a href="quest_melhorado.pdf">Question&aacute;rio para an&aacute;lise de tarefas (melhorado)</a> <br />
 <a href="aut.pdf">An&aacute;lise de tarefas + Funcionalidades</a> <br />
 <a href="aut_melhorado.pdf">An&aacute;lise de tarefas + Funcionalidades (melhorados)</a> <br />
 </div>
