--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -13,13 +13,13 @@
   <!--para criar a barra fixa no topo-->
   	<div id="barra">
   	<a href="index.html">
-	  	<div id="home" style="background-color:white;">
+	  	<div id="home">
 		  	<table>
 	  			<tr>
 	  				<td style="color:black;">HOME</td>
 	    		</tr>
 	    		<tr>
-	    			<td><img src="home.png"/></td>
+	    			<td><img src="home1.png"/></td>
 	    		</tr>	
 	    	</table>	
 	  	</div>
@@ -40,7 +40,7 @@
 	  				<td>MUSICA</td>
 	    		</tr>
 	    		<tr>
-	    			<td><a href="musica.html"><img src="music.svg"/></td>
+	    			<td><a href="musica.html"><img src="musica.png"/></td>
 	    		</tr>	
 	    	</table>
 	  	</div>
@@ -50,7 +50,7 @@
 	  				<td>HISTÓRICO</td>
 	    		</tr>
 	    		<tr>
-	    			<td><a href="historico.html"><img src="history.jpeg"/></td>
+	    			<td><a href="historico.html"><img src="historico.png"/></td>
 	    		</tr>	
 	    	</table>
 	  	</div>
