change header overall look, add curved borders to icons and organize code

--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -12,45 +12,48 @@
 
   <!--para criar a barra fixa no topo-->
   	<div id="barra">
-  	<a href="index.html">
-	  	<div id="home">
-		  	<table>
-	  			<tr>
-	  				<td style="color:black;">HOME</td>
-	    		</tr>
-	    		<tr>
-	    			<td><img src="home1.png"/></td>
-	    		</tr>	
-	    	</table>	
+	  	<div class="icones" id="home">
+	  		<a href="index.html">
+			  	<table>
+		  			<tr>
+		  				<td><img src="home1.png"/></td>
+		    		</tr>
+		    		<tr>
+		    			<td style="color:black;">Home</td>
+		    		</tr>	
+		    	</table>	
+		    </a>
 	  	</div>
 	 </a>
-  	  	<div id="menu">
-  	  		<table>
-	  			<tr>
-	  				<td>MENU</td>
-	    		</tr>
-	    		<tr>
-	    			<td><a href="menu.html"><img src="menu.png"/></td>
+  	  	<div class="icones" id="menu">
+  	  		<a href="menu.html">
+	  	  		<table>
+			  		<tr>
+			  			<td><img src="menu.png"/></td>
+			    	</tr>
+		    		<tr> 
+		    			<td>Menu</td>
+		    		</tr>	
+		    	</table>
+		    </a>
+	  	</div>
+	  	<div class="icones" id="musica">
+	  		<table>
+		  			<tr>
+		  				<td><a href="musica.html"><img src="musica.png"/></td>
+		    		</tr>
+	    		<tr> 
+	    			<td>Música</td>
 	    		</tr>	
 	    	</table>
 	  	</div>
-	  	<div id="musica">
+	  	<div class="icones" id="historico">
 	  		<table>
-	  			<tr>
-	  				<td>MUSICA</td>
-	    		</tr>
-	    		<tr>
-	    			<td><a href="musica.html"><img src="musica.png"/></td>
-	    		</tr>	
-	    	</table>
-	  	</div>
-	  	<div id="historico">
-	  		<table>
-	  			<tr>
-	  				<td>HISTÓRICO</td>
-	    		</tr>
-	    		<tr>
-	    			<td><a href="historico.html"><img src="historico.png"/></td>
+		  			<tr >
+		  				<td><a href="historico.html"><img src="historico.png"/></td>
+		    		</tr>
+	    		<tr> 
+	    			<td>Histórico</td>
 	    		</tr>	
 	    	</table>
 	  	</div>
