--- a/Projeto/historico.html
+++ b/Projeto/historico.html
@@ -149,6 +149,7 @@
 
     <p id="historico_par">Total:</p>
 
+    <!--inicio da barra de musica no inferior-->
     <div id="rodape">
       <img id="reticencias" onclick="toggleFooter('rodape')" src="ellipsis.png">
       <p><img id="img_reproducao" src="coluna.png"/>
@@ -156,7 +157,7 @@
       <div class="rod_elementos" id="rod_artista">Artista 1</div>
       <div class="rod_elementos" id="rod_tempo">Tempo 1</div></p>
     </div>
-
+    <!--fim da barra de musica no inferior-->
 
   </body>
  </html>
