--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -76,6 +76,7 @@
   	</div>
   	<!--fim da barra fixa-->
 
+  	<!--inicio da barra de musica no inferior-->
   	<div id="rodape">
   		<img id="reticencias" onclick="toggleFooter('rodape')" src="ellipsis.png">
   		<p><img id="img_reproducao" src="coluna.png"/>
@@ -83,6 +84,7 @@
   		<div class="rod_elementos" id="rod_artista">Artista 1</div>
   		<div class="rod_elementos" id="rod_tempo">Tempo 1</div></p>
   	</div>
+  	<!--fim da barra de musica no inferior-->
 
   </body>
  </html>
