add height to rows of historico and also scroll

--- a/Projeto/historico.html
+++ b/Projeto/historico.html
@@ -77,35 +77,35 @@
   	</div>
   	<!--fim da barra fixa-->
 
+    <div id="tabela">
+      <table id="historicotab" style="width:100%" align=center>
+        <tr>
+          <th>Qtd</th>
+          <th>Artigos</th>		
+          <th>Preço</th>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>1</td>		
+          <td>1</td>
+        </tr>
+        <tr>
+          <td>a</td>
+          <td>b</td>		
+          <td>c</td>
+        </tr>
+        <tr>
+          <td>d</td>
+          <td>e</td>		
+          <td>f</td>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>1</td>		
+          <td>1</td>
+        </tr>
 
-    <table id="historicotab" style="width:100%" align=center>
       <tr>
-        <th>Qtd</th>
-        <th>Artigos</th>		
-        <th>Preço</th>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>1</td>		
-        <td>1</td>
-      </tr>
-      <tr>
-        <td>a</td>
-        <td>b</td>		
-        <td>c</td>
-      </tr>
-      <tr>
-        <td>d</td>
-        <td>e</td>		
-        <td>f</td>
-      </tr>
-       <tr>
-        <td>1</td>
-        <td>1</td>		
-        <td>1</td>
-      </tr>
-
-      <!--<tr>
         <td>i</td>
         <td>j</td>		
         <td>k</td>
@@ -144,12 +144,12 @@
         <td>fe</td>
         <td>f</td>		
         <td>f</td>
-      </tr> -->
-    </table>
+      </tr> 
+      </table>
+    </div>
 
     <p id="historico_par">Total:</p>
 
-    <!--inicio da barra de musica no inferior-->
     <div id="rodape">
       <img id="reticencias" onclick="toggleFooter('rodape')" src="ellipsis.png">
       <p><img id="img_reproducao" src="coluna.png"/>
@@ -157,7 +157,7 @@
       <div class="rod_elementos" id="rod_artista">Artista 1</div>
       <div class="rod_elementos" id="rod_tempo">Tempo 1</div></p>
     </div>
-    <!--fim da barra de musica no inferior-->
+
 
   </body>
  </html>
