add buttons help and payment to home

--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -76,6 +76,33 @@
   	</div>
   	<!--fim da barra fixa-->
 
+  	<!--inicio ajuda/pagamento-->
+ 	<div id="buttons">
+  		<a href="ajuda.html">
+		  	<div class="icones" id="ajuda">
+			  	<table>
+		  			<tr>
+		  				<td><img class = "button_icone" src="ajuda.png"/></td>
+		    		</tr>
+		    		<tr>
+		    			<td id="ajuda1"><b>Ajuda</b></td>
+		    		</tr>	
+		    	</table>	
+		  	</div>
+		</a>
+  	  	<a href="pagamento.html">
+	  	  	<div class="icones" id="pagamento">
+		  	  		<table>
+				  		<tr>
+				  			<td id="paga1"><b>Pagamento<b></td>
+				  			<td><img class = "button_icone" src="pagamento.png"/></td>
+				    	</tr>
+			    	</table>
+		  	</div>
+		</a> 
+	</div>
+  	<!--fim ajuda/pagamento-->
+
   	<!--inicio da barra de musica no inferior-->
   	<div id="rodape">
   		<img id="reticencias" onclick="toggleFooter('rodape')" src="ellipsis.png">
