--- a/Projeto/historico.html
+++ b/Projeto/historico.html
@@ -77,6 +77,7 @@
   	</div>
   	<!--fim da barra fixa-->
 
+    <!--inicio tabela historico-->
     <div id="tabela">
       <table id="historicotab" style="width:100%" align=center>
         <tr>
@@ -147,7 +148,7 @@
       </tr> 
       </table>
     </div>
-
+    <!--fim tabela historico-->
     <p id="historico_par">Total:</p>
 
     <!--inicio da barra de musica no inferior-->
