fixed footer problem, sidebar on history table

--- a/Projeto/historico.html
+++ b/Projeto/historico.html
@@ -28,7 +28,7 @@
   	<div id="barra">
   		<a href="index.html">
 		  	<div class="icones" id="home">
-			  	<table>
+			  	<table  class="header_table">
 		  			<tr>
 		  				<td><img class = "imagem_icone" src="home.png"/></td>
 		    		</tr>
@@ -40,7 +40,7 @@
 		</a>
   	  	<a href="menu.html">
 	  	  	<div class="icones" id="menu">
-		  	  		<table>
+		  	  		<table  class="header_table">
 				  		<tr>
 				  			<td><img class = "imagem_icone" src="menu.png"/></td>
 				    	</tr>
@@ -52,7 +52,7 @@
 		</a>
 		<a href="musica.html">
 		  	<div class="icones" id="musica">
-		  		<table>
+		  		<table  class="header_table">
 			  			<tr>
 			  				<td><img class = "imagem_icone" src="musica.png"/></td>
 			    		</tr>
@@ -64,7 +64,7 @@
 		</a>
 		<a href="historico.html">
 		  	<div class="icones" id="historico" style="border-color: #006df0;">
-		  		<table>
+		  		<table  class="header_table">
 			  			<tr >
 			  				<td><img class = "imagem_icone" src="historico.png"/></td>
 			    		</tr>
@@ -78,73 +78,73 @@
   	<!--fim da barra fixa-->
 
     <div id="tabela">
-      <table id="historicotab" style="width:100%" align=center>
-        <tr>
+      <table id="historicotab"  align="center">
+        <tr id="table_header">
           <th>Qtd</th>
           <th>Artigos</th>		
           <th>Preço</th>
         </tr>
         <tr>
-          <td>1</td>
+          <td class="primeira_col">1</td>
           <td>1</td>		
-          <td>1</td>
+          <td class="terceira_col">1</td>
         </tr>
         <tr>
-          <td>a</td>
+          <td class="primeira_col">a</td>
           <td>b</td>		
-          <td>c</td>
+          <td class="terceira_col">c</td>
         </tr>
         <tr>
-          <td>d</td>
+          <td class="primeira_col">d</td>
           <td>e</td>		
-          <td>f</td>
+          <td class="terceira_col">f</td>
         </tr>
         <tr>
-          <td>1</td>
+          <td class="primeira_col">1</td>
           <td>1</td>		
-          <td>1</td>
+          <td class="terceira_col">1</td>
         </tr>
 
-      <tr>
-        <td>i</td>
-        <td>j</td>		
-        <td>k</td>
-      </tr>
-      <tr>
-        <td>l</td>
-        <td>m</td>		
-        <td>n</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>1</td>		
-        <td>1</td>
-      </tr>
-      <tr>
-        <td>o</td>
-        <td></td>		
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td>p</td>		
-        <td></td>
-      </tr>
-       <tr>
-        <td>1</td>
-        <td>1</td>		
-        <td>1</td>
-      </tr>
-      <tr>
-        <td></td>
-        <td>r</td>		
-        <td></td>
-      </tr>
-      <tr>
-        <td>fe</td>
-        <td>f</td>		
-        <td>f</td>
-      </tr> 
+        <tr>
+          <td class="primeira_col">i</td>
+          <td>j</td>		
+          <td class="terceira_col">k</td>
+        </tr>
+        <tr>
+          <td class="primeira_col">l</td>
+          <td>m</td>		
+          <td class="terceira_col">n</td>
+        </tr>
+        <tr>
+          <td class="primeira_col">1</td>
+          <td>1</td>		
+          <td class="terceira_col">1</td>
+        </tr>
+        <tr>
+          <td class="primeira_col">o</td>
+          <td></td>		
+          <td class="terceira_col"></td>
+        </tr>
+        <tr>
+          <td class="primeira_col"></td>
+          <td>p</td>		
+          <td class="terceira_col"></td>
+        </tr>
+         <tr>
+          <td class="primeira_col">1</td>
+          <td>1</td>		
+          <td class="terceira_col">1</td>
+        </tr>
+        <tr>
+          <td class="primeira_col"></td>
+          <td>r</td>		
+          <td class="terceira_col"></td>
+        </tr>
+        <tr>
+          <td class="primeira_col">fe</td>
+          <td>f</td>		
+          <td class="terceira_col">f</td>
+        </tr> 
       </table>
     </div>
 
