--- a/Projeto/menu.html
+++ b/Projeto/menu.html
@@ -27,7 +27,7 @@
   	<div id="barra">
   		<a href="index.html">
 		  	<div class="icones" id="home">
-			  	<table>
+			  	<table  class="header_table">
 		  			<tr>
 		  				<td><img class = "imagem_icone" src="home.png"/></td>
 		    		</tr>
@@ -39,7 +39,7 @@
 		</a>
   	  	<a href="menu.html">
 	  	  	<div class="icones" id="menu"  style="border-color: #006df0;">
-		  	  		<table>
+		  	  		<table  class="header_table">
 				  		<tr>
 				  			<td><img class = "imagem_icone" src="menu.png"/></td>
 				    	</tr>
@@ -51,7 +51,7 @@
 		</a>
 		<a href="musica.html">
 		  	<div class="icones" id="musica">
-		  		<table>
+		  		<table  class="header_table">
 			  			<tr>
 			  				<td><img class = "imagem_icone" src="musica.png"/></td>
 			    		</tr>
@@ -63,7 +63,7 @@
 		</a>
 		<a href="historico.html">
 		  	<div class="icones" id="historico">
-		  		<table>
+		  		<table  class="header_table">
 			  			<tr >
 			  				<td><img class = "imagem_icone" src="historico.png"/></td>
 			    		</tr>
