--- a/Projeto/musica.html
+++ b/Projeto/musica.html
@@ -14,7 +14,7 @@
   	<div id="barra">
   		<a href="index.html">
 		  	<div class="icones" id="home">
-			  	<table>
+			  	<table  class="header_table">
 		  			<tr>
 		  				<td><img class = "imagem_icone" src="home.png"/></td>
 		    		</tr>
@@ -26,7 +26,7 @@
 		</a>
   	  	<a href="menu.html">
 	  	  	<div class="icones" id="menu">
-		  	  		<table>
+		  	  		<table  class="header_table">
 				  		<tr>
 				  			<td><img class = "imagem_icone" src="menu.png"/></td>
 				    	</tr>
@@ -38,7 +38,7 @@
 		</a>
 		<a href="musica.html">
 		  	<div class="icones" id="musica" style="border-color: #006df0;">
-		  		<table>
+		  		<table  class="header_table">
 			  			<tr>
 			  				<td><img class = "imagem_icone" src="musica.png"/></td>
 			    		</tr>
@@ -50,7 +50,7 @@
 		</a>
 		<a href="historico.html">
 		  	<div class="icones" id="historico">
-		  		<table>
+		  		<table  class="header_table">
 			  			<tr >
 			  				<td><img class = "imagem_icone" src="historico.png"/></td>
 			    		</tr>
