--- a/Projeto/historico.html
+++ b/Projeto/historico.html
@@ -154,10 +154,14 @@
     <!--inicio da barra de musica no inferior-->
     <div id="rodape">
       <img id="reticencias" onclick="toggleFooter('rodape')" src="ellipsis.png">
-      <p><img id="img_reproducao" src="coluna.png"/>
-      <div class="rod_elementos" id="rod_musica">Música 1</div>
-      <div class="rod_elementos" id="rod_artista">Artista 1</div>
-      <div class="rod_elementos" id="rod_tempo">Tempo 1</div></p>
+      <table id="rodape_tab">
+        <tr>
+          <td id="coluna_img"><img src="coluna.png"></td>
+          <td><div class="rod_elementos" id="rod_musica">Música 1</div></td>
+          <td><div class="rod_elementos" id="rod_artista">Artista 1</div></td>
+          <td><div class="rod_elementos" id="rod_tempo">Tempo 1</div></td>
+        </tr>
+    </table>
     </div>
     <!--fim da barra de musica no inferior-->
 
