--- a/Projeto/historico.html
+++ b/Projeto/historico.html
@@ -7,19 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--<adapt the page to the dispositive-->
   <meta charset="UTF-8">
 
-
-    <script type="text/javascript">
-      function toggleFooter(id) { 
-        if(document.getElementById(id).style.height == "4.5%") {
-          document.getElementById(id).style.height = "12.5%";
-        }
-
-        else {
-          document.getElementById(id).style.height = "4.5%";
-        }
-      }
-  </script>
-
+  <script src="javascript.js"></script> <!--importa o codigo javascript do ficheiro javascript.js-->
 
   </head>
   <body>
@@ -154,10 +142,14 @@
     <!--inicio da barra de musica no inferior-->
     <div id="rodape">
       <img id="reticencias" onclick="toggleFooter('rodape')" src="ellipsis.png">
-      <p><img id="img_reproducao" src="coluna.png"/>
-      <div class="rod_elementos" id="rod_musica">Música 1</div>
-      <div class="rod_elementos" id="rod_artista">Artista 1</div>
-      <div class="rod_elementos" id="rod_tempo">Tempo 1</div></p>
+      <table id="rodape_tab">
+        <tr>
+          <td id="coluna_img"><img src="coluna.png"></td>
+          <td><div class="rod_elementos" id="rod_musica">Música 1</div></td>
+          <td><div class="rod_elementos" id="rod_artista">Artista 1</div></td>
+          <td><div class="rod_elementos" id="rod_tempo">Tempo 1</div></td>
+        </tr>
+    </table>
     </div>
     <!--fim da barra de musica no inferior-->
 
