--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -8,17 +8,7 @@
   <meta charset="UTF-8">
 
 
-  <script type="text/javascript">
-    function toggleFooter(id) { 
-      if(document.getElementById(id).style.height == "4.5%") {
-        document.getElementById(id).style.height = "12.5%";
-      }
-
-      else {
-        document.getElementById(id).style.height = "4.5%";
-      }
-    }
-  </script>
+  <script src="javascript.js"></script> <!--importa o codigo javascript do ficheiro javascript.js-->
 
   </head>
   <body>
