add payment screen

--- a/Projeto/ajuda.html
+++ b/Projeto/ajuda.html
@@ -80,7 +80,7 @@
 	  	<table id="historicotab"  align="center">
 		  <tr>
 		    <td id="colorful1">Home</td>
-		    <td>Funciona como um ambiente de trabalho. Local onde se pode procurar ajuda ou efetuar o pagamento.</td>		
+		    <td>Funciona como um ambiente de trabalho. Local onde se pode navegar ou efetuar o pagamento.</td>		
 		  </tr>
 		  <tr>
 		    <td id="colorful1">Menu</td>
