--- a/Projeto/comida.html
+++ b/Projeto/comida.html
@@ -26,7 +26,7 @@
 		    	</table>	
 		  	</div>
 		</a>
-  	  	<a href="menu.html">
+  	  	<a href="comida.html">
 	  	  	<div class="icones" id="menu"  style="border-color: #006df0;">
 		  	  		<table  class="header_table">
 				  		<tr>
@@ -69,24 +69,32 @@
   			<td>
 		  		<table id="submenu">
 		  			<tr>
-		  				<td><div class="icones_menu">Bebidas</div></td>
-		  			</tr>
+		  				<td>
+		  					<a href="bebidas.html">
+		  						<div class="icones_menu">Bebidas</div>
+		  					</a>
+		  				</td>
+		  			</tr>	
 		  			<tr>
-		  				<td><div class="icones_menu">Comida</div></td>
+		  				<td>
+		  					<a href="comida.html">
+		  						<div class="icones_menu"  style="border-color: #006df0;">Comida</div>
+		  					</a>
+		  				</td>
 		  			</tr>
 		  		</table>
 			</td>
 			<td>
 		  		<table id="produtos">
 		  			<tr>
-		  				<td><div class="icones_bebidas">Bebida 1</div></td>
-		  				<td><div class="icones_bebidas">Bebida 2</div></td>
-		  				<td><div class="icones_bebidas">Bebida 3</div></td>
+		  				<td><div class="icones_bebidas">Comida 1</div></td>
+		  				<td><div class="icones_bebidas">Comida 2</div></td>
+		  				<td><div class="icones_bebidas">Comida 3</div></td>
 		  			</tr>
 		  			<tr>
-		  				<td><div class="icones_bebidas">Bebida 4</div></td>
-		  				<td><div class="icones_bebidas">Bebida 5</div></td>
-		  				<td><div class="icones_bebidas">Bebida 6</div></td>
+		  				<td><div class="icones_bebidas">Comida 4</div></td>
+		  				<td><div class="icones_bebidas">Comida 5</div></td>
+		  				<td><div class="icones_bebidas">Comida 6</div></td>
 		  			</tr>
 		  		</table>
 			</td>
@@ -96,7 +104,7 @@
 		  				<td><div class="icones_lista">+</div></td>
 		  				<td><div class="icones_lista">1</div></td>
 		  				<td><div class="icones_lista">-</div></td>
-		  				<td><div class="icones_lista">Bebida 1</div></td>
+		  				<td><div class="icones_lista">Comida 1</div></td>
 		  				<td><div class="icones_lista">X</div></td>
 		  			</tr>	
 		  		</table>	
