--- a/Projeto/historico.html
+++ b/Projeto/historico.html
@@ -26,7 +26,7 @@
 		    	</table>	
 		  	</div>
 		</a>
-  	  	<a href="menu.html">
+  	  	<a href="bebidas.html">
 	  	  	<div class="icones" id="menu">
 		  	  		<table  class="header_table">
 				  		<tr>
